--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,5 @@
   "tabWidth": 4,
   "semi": true,
   "singleQuote": false,
-  "bracketSpacing": true,
-  "printWidth": 100
+  "bracketSpacing": true
 }
