--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
-  "name": "nazo2020-mypage",
+  "name": "reacr-threejs-trial",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -41,11 +34,23 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/cannon": "^0.1.5",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
     "@types/prettier": "^2.1.5",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.7",
     "@types/testing-library__jest-dom": "^5.9.5",
+    "@types/three": "^0.103.2",
+    "cannon": "^0.6.2",
     "prettier": "^2.2.1",
+    "react-three-fiber": "^5.3.10",
     "styled-components": "^5.2.1",
+    "three": "^0.123.0",
     "typesync": "^0.8.0"
   }
 }
